autotests/syntax-tests/tests/negative/negative83.sref
Name { Name Name ( $ESWAP Name Name ) Name = : = ; = ; } ; 